--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,8 @@ h1 {
 }
 
 .form button:hover {
-  background-color: #FA7633;
+  background-color: #570bf0;
+  
 }
 
 @media only screen and (max-width: 600px) {
